finished updating text in index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <img class="intro_img" alt="" src="./images/tires.jpg">
     <div>descriptive text here</div>
     <div>
+        <!--images of various tires with info to be added below-->
         <img class="" alt="" src="">
         <p>
             img 1
@@ -45,6 +46,13 @@
         <p>My tires went right round, right round. -driver</p>
         <br>
         <p>If it wasn't for the new tires, I would have died tonight. -passenger</p>
+    </div>
+    <div class="calltoaction">
+        <p>Subcribe for offers!</p>
+        <p>Use the link to get emails with offers and discounts throughout the year!</p>
+        <!--button for email sign ups-->
+        <link rel="stylesheet" href="">
+        <!--button for email sign ups-->
     </div>
 </body>
 </html>
