reworked coding layout and changed out stylsheet

--- a/index.html
+++ b/index.html
@@ -6,16 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
     <title>Tire Stop Shop</title>
-
-    <!--header logo-->
-<p class="header logo">Keeping you on the road!</p>
-    <!--header logo-->
-
-    <!--header links top right-->
-<div class="toplinks">links to be added</div>
-    <!--header links top right-->
+  
 </head>
 <body>
+    <nav class="navbar">
+        <div class="container">
+            <div class="logo">Tire Shop Stop</div>
+            <ul class="nav">
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Contant Us</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container">
     <div class="hero">
         <p>Tires for all your vehicle needs.</p>
     </div>
@@ -24,36 +35,54 @@
     </div>
     <img class="intro_img" alt="" src="./images/tires.jpg">
     <div>descriptive text here</div>
-    <div>
-        <!--images of various tires with info to be added below-->
-        <img class="" alt="" src="">
-        <p>
-            img 1
-        </p>
-        <img class="" alt="" src="">
-        <p>
-            img 2
-        </p>
-        <img class="" alt="" src="">
-        <p>
-            img 3
-        </p>
-        <img class="" alt="" src="">
-        <p>
-            img 4
-        </p>
     </div>
+
+    <div class="container">
+    <div class="samples">
+        <!--images of various tires with info to be added below-->
+        <div class="item"><img class="" alt="" src="">
+            <p>
+                img 1
+            </p>
+        </div>
+
+        <div class="item"><img class="" alt="" src="">
+            <p>
+                img 2
+            </p>
+        </div>
+
+        <div class="item"><img class="" alt="" src="">
+            <p>
+                img 3
+            </p>
+        </div>
+
+        <div class="item"><img class="" alt="" src="">
+            <p>
+                img 4
+            </p>
+        </div>
+    </div>
+        
+    </div>
+
+    <div class="container">
     <div class="quotes">
         <p>My tires went right round, right round. -driver</p>
         <br>
         <p>If it wasn't for the new tires, I would have died tonight. -passenger</p>
     </div>
+    </div>
+
+    <div class="container">
     <div class="calltoaction">
         <p>Subcribe for offers!</p>
         <p>Use the link to get emails with offers and discounts throughout the year!</p>
         <!--button for email sign ups-->
         <link rel="stylesheet" href="">
         <!--button for email sign ups-->
+    </div>
     </div>
 </body>
 </html>
