added new images, spacing, flex. stylesheet needs work

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </nav>
 
     <div class="container">
-    <div class="hero">
-        <p>Tires for all your vehicle needs.</p>
-    </div>
+        <div class="hero">
+            <p>Tires for all your vehicle needs.</p>
+        </div>
     <div class="hero2">
         <p>From bicycles, lawnmowers, motorcycles, cars, monstertrucks and many more!</p>
     </div>
@@ -40,27 +40,27 @@
     <div class="container">
     <div class="samples">
         <!--images of various tires with info to be added below-->
-        <div class="item"><img class="" alt="" src="">
+        <div class="item"><img class="" alt="monstertruck in air" src="./images/monstertruck.jpeg">
             <p>
-                img 1
+                We carry the big tires for all your destruction needs!
             </p>
         </div>
 
-        <div class="item"><img class="" alt="" src="">
+        <div class="item"><img class="" alt="mountain bikes in snow" src="./images/bicycle.jpeg">
             <p>
-                img 2
+                From training wheels to heavy duty mountain biking tires, we got em!
             </p>
         </div>
 
-        <div class="item"><img class="" alt="" src="">
+        <div class="item"><img class="" alt="car showing tires" src="./images/car.webp">
             <p>
-                img 3
+                Wether you're racing or commutting, we'll get you there!
             </p>
         </div>
 
-        <div class="item"><img class="" alt="" src="">
+        <div class="item"><img class="" alt="motorcycle" src="./images/motorcycle.jpeg">
             <p>
-                img 4
+                Yes, we carry white wall tires too!
             </p>
         </div>
     </div>
